[AHC-350] - Sonar code issues fixed.